deploy/internal/deployment-endpoint.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: noobaa
  name: noobaa-endpoint
spec:
  replicas: 1
  selector:
    matchLabels:
      noobaa-s3: noobaa
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        noobaa-s3: noobaa
        app: noobaa
      annotations:
        noobaa.io/configmap-hash: ""
    spec:
      serviceAccountName: noobaa-endpoint
      volumes:
        - name: mgmt-secret
          secret:
            secretName: noobaa-mgmt-serving-cert
            optional: true
        - name: s3-secret
          secret:
            secretName: noobaa-s3-serving-cert
            optional: true
        - name: oidc-token
          projected:
            sources:
            - serviceAccountToken:
                path: oidc-token
                expirationSeconds: 3600
                audience: api
        - name: noobaa-auth-token
          secret:
            secretName: noobaa-endpoints
            optional: true
        - name: noobaa-server
          secret:
            secretName: noobaa-server
            optional: true   
      containers:
        - name: endpoint
          image: NOOBAA_CORE_IMAGE
          command:
            - /noobaa_init_files/noobaa_init.sh
            - init_endpoint
          resources:
            requests:
              cpu: "999m"
              memory: "2Gi"
            limits:
              cpu: "999m"
              memory: "2Gi"
          securityContext:
            fsGroupChangePolicy: "OnRootMismatch"
            seLinuxOptions:
              type: "spc_t"
            capabilities:
              add: ["SETUID", "SETGID"]
          ports:
            - containerPort: 6001
            - containerPort: 6443
            - containerPort: 7443
          volumeMounts:
            # curently ssl_utils expects both secrets to be configured in order to use
            # certificates. TODO: Allow each secret to be configured by intself.
            - name: mgmt-secret
              mountPath: /etc/mgmt-secret
              readOnly: true
            - name: s3-secret
              mountPath: /etc/s3-secret
              readOnly: true
            - name: noobaa-auth-token
              mountPath: /etc/noobaa-auth-token
              readOnly: true
            - name: noobaa-server
              mountPath: /etc/noobaa-server
              readOnly: true
            # used for aws sts endpoint type
            - name: oidc-token
              mountPath: /var/run/secrets/openshift/serviceaccount
              readOnly: true
          readinessProbe: # must be configured to support rolling updates
            tcpSocket:
              port: 6001 # ready when s3 port is open
            timeoutSeconds: 5
      securityContext: 
        runAsUser: 0
        runAsGroup: 0
